--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
     "multer-s3": "^2.0.0",
     "nodemon": "^2.0.22",
     "secp256k1": "^5.0.0"
+  },
+  "engines": {
+    "node": "16.x"
   }
 }
